[metadata]
name = msdss-base-dotenv
version = 0.2.9
author = Richard Wen
author_email = rrwen.dev@gmail.com
description = Environmental file management for the Modular Spatial Decision Support Systems (MSDSS) framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rrwen/msdss-base-dotenv
project_urls =
    Bug Tracker = https://github.com/rrwen/msdss-base-dotenv/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir == src
packages = find:
install_requires = 
    cryptography
    python-dotenv
python_requires = >=3.8

[options.entry_points]
console_scripts =
    msdss-dotenv = msdss_base_dotenv.cli:run

[options.packages.find]
where = src